<resources>
    <string name="app_name">7OS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">AGE</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">EMAIL</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="phone_no">PHONE NO.</string>
</resources>