<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="#012340">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up"
        android:text="@string/sign_up"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_name"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_email"
        android:textColorHint="@color/white"
        android:hint="NAME"
        android:inputType="textPersonName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_email"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/signup_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_pass"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_pass"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/signup_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_phone"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:hint="@string/enter_password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_phone"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/signup_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_age"
        android:textColorHint="@color/white"
        android:inputType="phone"
        android:hint="@string/phone_no"
        tools:ignore="HardcodedText" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_age"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/signup_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_button"
        android:textColorHint="@color/white"
        android:inputType="number"
        android:hint="@string/age" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_button"
        android:layout_marginHorizontal="100dp"
        app:layout_constraintTop_toBottomOf="@id/signup_phone"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        app:cardCornerRadius="10dp"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="NEXT"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingVertical="10dp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_redirect"
        app:layout_constraintTop_toBottomOf="@id/signup_button"
        android:layout_marginTop="10dp"
        android:textSize="16dp"
        android:textColor="#FFF425"
        android:text="Already Registered? Login Here"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_progressbar"
        app:layout_constraintTop_toBottomOf="@id/login_redirect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>